[package]
authors = ["Connor Slade <conorslade@connorcode.com>"]
description = "A CLI tool to convert between units."
edition = "2021"
name = "unit_convert"
version = "0.1.0"

[lib]
name = "unit_convert"
path = "src/lib.rs"

[[bin]]
name = "unit_convert"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
hashbrown = "0.14.1"
identconv = "0.2.0"
once_cell = "1.18.0"
paste = "1.0.14"
regex = "1.9.6"
thousands = "0.2.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
approx = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

[workspace]
members = ["wasm"]
